--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "vue": "^2.5.9",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-loader": "^13.5.0",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.3",
@@ -84,6 +85,7 @@
     "write-file-webpack-plugin": "^4.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.2",
     "eslint": "^4.13.0",
     "eslint-config-mysticatea": "^12.0.0",
     "eslint-plugin-vue": "^4.0.0-beta.2",
